# agent-rerun-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SPEC.md  pyproject.toml
docs/: architecture.md
examples/: quickstart.py
src/agent_rerun/: __init__.py  capture.py  cli.py  cosine.py  hash.py  jcs.py  schema.py  sign.py  verify.py
tests/: test_conformance.py  test_unit.py
vectors/: test-key.json
vectors/c1-byte-replay-passes/: actual.json  bundle.rr  expected.json
vectors/c2-below-threshold-rejected/: actual.json  expected.json
vectors/c2-semantic-replay-passes/: actual.json  expected.json
vectors/c3-mutated-bundle-rejected/: bundle.rr  expected.json
vectors/c4-messages-mismatch-rejected/: actual.json  expected.json
vectors/embedding-dim-mismatch-rejected/: actual.json  bundle.rr  expected.json
vectors/fingerprint-drift-warning/: actual.json  expected.json
vectors/schema-violation-rerun-version/: bundle.rr  expected.json
vectors/strictness-extra-bundle-field/: bundle.rr  expected.json
vectors/strictness-extra-inputs-field/: bundle.rr  expected.json
vectors/structural-unsupported/: bundle.rr  expected.json
